# md_setup

./: .gitignore  README.md  add_h.py  env.yml  environment.yml  param_lig.py  parameterize.py  paramterize.py  setup.cfg  setup.py  summit_param.py
comp_sim/: namd.py  param.py  sim.py  utils.py
comp_sim/templates/: psfgen.j2
comparam/: ligand.py  param.py
envs/: env.yml
examples/: comp.py  ligand_IBP.py  param_amber.py  param_comp.py  param_gmx.py  param_lig.py  param_namd.py  param_prot.py
md_setup/: amber.py  gmx.py  mae.py  namd.py  param.py  utils.py
md_setup/templates/: psfgen.j2
scripts/: mae_to_pdb.py  param_amber.py  param_gmx.py  parameterize.py  pdb_dup.py  pymol_align.py
