[metadata]
name = md_setup
version = 1.0.0
description = 
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

# url = https://deepdrivemd.github.io/
author = Heng Ma, Arvind Ramanathan
author_email = ramanathana@anl.gov
license = MIT License
keywords = workflow, molecular-simulations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Physics

[options]
packages= find:
install_requires = 
    MDAnalysis
    parmed
    jinja2
    h5py
    rdkit
    mendeleev
python_requires = >=3.8
include_package_data = True

# [options.entry_points]
# console_scripts = 
#     ddmd = ddmd.cli:main

[options.packages.find]
exclude =
    data
    docs
    envs
    examples
 
[options.package_data]
* = *.j2

[flake8]
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning
